About this commit: - add GetProjectAssetSummary operation

--- a/src/java/pcmconfig.properties
+++ b/src/java/pcmconfig.properties
@@ -1,5 +1,5 @@
 PCM_DB_DRIVER=com.mysql.jdbc.Driver
-PCM_DB_URL=jdbc:mysql://127.0.0.1:3306/pcm?zeroDateTimeBehavior=convertToNull
+PCM_DB_URL=jdbc:mysql://127.0.0.1:3306/pcm?autoReconnect=true
 PCM_DB_USER=root
 PCM_DB_PASSWORD=abc@1234
 
